<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">


    <ImageView
        android:id="@+id/foozam_symbol"
        android:layout_width="92dp"
        android:layout_height="81dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/rare_finds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="14dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/title_rare_find"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foozam_symbol" />

    <ImageView
        android:id="@+id/rare_fruit_image"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/title_rare_find"
        android:src="@drawable/kiwano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rare_finds" />

    <TextView
        android:id="@+id/top_picks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/tuffy"
        android:text="@string/title_top_picks"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rare_fruit_image" />

    <ImageView
        android:id="@+id/top_picks_image"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/title_rare_find"
        android:src="@drawable/kiwano"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_picks" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />




</androidx.constraintlayout.widget.ConstraintLayout>