<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipesActivity">


    <!-- Row One of Recipes  -->


    <ImageView
        android:id="@+id/foozam_symbol"
        android:layout_width="92dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/symbol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Row two of recipes -->


    <TextView
        android:id="@+id/recipe_two_label"
        android:layout_width="139dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/title_recipe"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/recipe_five_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_three_image" />


    <!-- Row 3 of recipes -->

    <!-- End of recipes -->

    <ImageView
        android:id="@+id/recipe_four_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="53dp"
        android:contentDescription="@string/recipes_image_view"
        android:onClick="goToUrl"
        android:src="@drawable/strawberry1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recipe_three_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recipe_five_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="42dp"
        android:contentDescription="@string/recipes_image_view"
        android:onClick="goToUrl"
        android:src="@drawable/strawberry2"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/recipe_six_image"
        app:layout_constraintTop_toBottomOf="@+id/recipe_two_label" />

    <ImageView
        android:id="@+id/recipe_six_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="53dp"
        android:contentDescription="@string/recipes_image_view"
        android:onClick="goToUrl"
        android:src="@drawable/strawberry3"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_five_image"
        app:layout_constraintEnd_toStartOf="@+id/recipe_five_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipe_five_image" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_five_image"
        app:menu="@menu/bottom_navigation_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>